--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,12 +16,16 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
+  <!-- This was included in original hyde style
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
+  -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
+  <!-- Added This for Colouring-->
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/rjow.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
+  <link rel="SP_Logo_2014_144" sizes="144x144" href="{{ site.baseurl }}public/SP_Logo_2014_144.png">
                                  <link rel="shortcut icon" href="{{ site.baseurl }}public/favicon.ico">
 
   <!-- RSS -->
