--- a/public/css/rjow.css
+++ b/public/css/rjow.css
@@ -8,8 +8,11 @@ body {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
+/*
   color: #dfdfdf;
-}
+*/
+  color: #dfdfdf;
+  }
 
 /* Quotes */
 blockquote {
@@ -64,7 +67,8 @@ tbody tr:nth-child(odd) th {
 
 /* Sidebar links */
 .sidebar a {
-  color: #333;
+  /* color: #333; */
+  color: #FABF29;
 }
 
 /* About section */
