Added logo to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,10 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1>
+    <span class="sidebar-nav-item"><img src="/public/SP_Logo_2014_144.png" alt="SP" width=50></span>
+	  <h1>
         <a href="{{ site.baseurl }}">
-          {{ site.title }}
+          {{ site.title }} 
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
